tools/c7n_gcp/tests/data/flights/gke-cluster-filter-effective-firewall/get-compute-v1-projects-cloud-custodian-global-networks-default-getEffectiveFirewalls_1.json
{
  "headers": {
    "content-type": "application/json; charset=UTF-8",
    "vary": "Origin, X-Origin, Referer",
    "date": "Tue, 03 Oct 2023 18:44:49 GMT",
    "server": "ESF",
    "cache-control": "private",
    "x-xss-protection": "0",
    "x-frame-options": "SAMEORIGIN",
    "x-content-type-options": "nosniff",
    "transfer-encoding": "chunked",
    "status": "200",
    "content-length": "45180",
    "-content-encoding": "gzip",
    "content-location": "https://compute.googleapis.com/compute/v1/projects/cloud-custodian/global/networks/default/getEffectiveFirewalls?alt=json"
  },
  "body": {
    "firewalls": [
      {
        "kind": "compute#firewall",
        "id": "74942436503295148",
        "creationTimestamp": "2023-08-03T15:29:23.242-07:00",
        "name": "c7nsuccess5432",
        "description": "",
        "network": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/networks/default",
        "priority": 1000,
        "sourceRanges": [
          "172.16.0.0/12"
        ],
        "sourceTags": [
          "web"
        ],
        "allowed": [
          {
            "IPProtocol": "tcp",
            "ports": [
              "5432"
            ]
          }
        ],
        "direction": "INGRESS",
        "logConfig": {
          "enable": false
        },
        "disabled": false,
        "selfLink": "https://www.googleapis.com/compute/v1/projects/cloud-custodian/global/firewalls/c7nsuccess5432"
      }
    ]
  }
}
