tools/c7n_gcp/tests/data/flights/gke-cluster-filter-effective-firewall/get-v1-projects-cloud-custodian-locations---clusters_1.json
{
  "headers": {
    "content-type": "application/json; charset=UTF-8",
    "vary": "Origin, X-Origin, Referer",
    "date": "Tue, 03 Oct 2023 18:44:48 GMT",
    "server": "ESF",
    "cache-control": "private",
    "x-xss-protection": "0",
    "x-frame-options": "SAMEORIGIN",
    "x-content-type-options": "nosniff",
    "transfer-encoding": "chunked",
    "status": "200",
    "content-length": "10915",
    "-content-encoding": "gzip",
    "content-location": "https://container.googleapis.com/v1/projects/cloud-custodian/locations/-/clusters?alt=json"
  },
  "body": {
    "clusters": [
      {
        "name": "c7nnode-cluster-1",
        "initialNodeCount": 1,
        "masterAuth": {
          "clusterCaCertificate": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVMRENDQXBTZ0F3SUJBZ0lRT21sV0VWRkpLVjJGOXlya2M3SGZCakFOQmdrcWhraUc5dzBCQVFzRkFEQXYKTVMwd0t3WURWUVFERXlReU9URTBNV0ZoTnkxbU5qSmlMVFEyTlRrdE9EZGpNaTFpWm1Nd056QTNNVEEzWkRJdwpJQmNOTWpNeE1EQXlNVE13TWpVeldoZ1BNakExTXpBNU1qUXhOREF5TlROYU1DOHhMVEFyQmdOVkJBTVRKREk1Ck1UUXhZV0UzTFdZMk1tSXRORFkxT1MwNE4yTXlMV0ptWXpBM01EY3hNRGRrTWpDQ0FhSXdEUVlKS29aSWh2Y04KQVFFQkJRQURnZ0dQQURDQ0FZb0NnZ0dCQU13MGk4RERlTSt6OUx6aVJFYlFDN25wV3NJWm5UWVBGT2N1d [...]
        },
        "loggingService": "logging.googleapis.com/kubernetes",
        "monitoringService": "monitoring.googleapis.com/kubernetes",
        "network": "default",
        "clusterIpv4Cidr": "10.0.0.0/14",
        "addonsConfig": {
          "kubernetesDashboard": {
            "disabled": true
          },
          "networkPolicyConfig": {
            "disabled": true
          },
          "gcePersistentDiskCsiDriverConfig": {
            "enabled": true
          }
        },
        "subnetwork": "c7nfailnode-subnet",
        "locations": [
          "us-central1-c",
          "us-central1-a",
          "us-central1-b"
        ],
        "labelFingerprint": "a9dc16a7",
        "legacyAbac": {},
        "ipAllocationPolicy": {
          "useRoutes": true,
          "stackType": "IPV4",
          "podCidrOverprovisionConfig": {}
        },
        "masterAuthorizedNetworksConfig": {
          "gcpPublicCidrsAccessEnabled": true
        },
        "maintenancePolicy": {
          "resourceVersion": "e3b0c442"
        },
        "binaryAuthorization": {
          "evaluationMode": "DISABLED"
        },
        "autoscaling": {
          "autoscalingProfile": "BALANCED"
        },
        "networkConfig": {
          "network": "projects/cloud-custodian/global/networks/default",
          "subnetwork": "projects/cloud-custodian/regions/us-central1/subnetworks/c7nfailnode-subnet",
          "defaultSnatStatus": {},
          "serviceExternalIpsConfig": {}
        },
        "privateClusterConfig": {
          "privateEndpoint": "10.10.0.2",
          "publicEndpoint": "34.42.0.34"
        },
        "databaseEncryption": {
          "state": "DECRYPTED"
        },
        "shieldedNodes": {
          "enabled": true
        },
        "releaseChannel": {
          "channel": "REGULAR"
        },
        "notificationConfig": {
          "pubsub": {}
        },
        "selfLink": "https://container.googleapis.com/v1/projects/cloud-custodian/locations/us-central1/clusters/c7nnode-cluster-1",
        "zone": "us-central1",
        "endpoint": "34.42.0.34",
        "initialClusterVersion": "1.27.3-gke.100",
        "currentMasterVersion": "1.27.3-gke.100",
        "currentNodeVersion": "1.27.3-gke.100",
        "createTime": "2023-10-02T14:02:52+00:00",
        "status": "RUNNING",
        "nodeIpv4CidrSize": 24,
        "servicesIpv4Cidr": "10.3.240.0/20",
        "location": "us-central1",
        "autopilot": {},
        "id": "13023732ef13411b8e5aacbc471501413a1c32f82ce94898b1fedab866fd5c98",
        "nodePoolDefaults": {
          "nodeConfigDefaults": {
            "loggingConfig": {
              "variantConfig": {
                "variant": "DEFAULT"
              }
            }
          }
        },
        "loggingConfig": {
          "componentConfig": {
            "enableComponents": [
              "SYSTEM_COMPONENTS",
              "WORKLOADS"
            ]
          }
        },
        "monitoringConfig": {
          "componentConfig": {
            "enableComponents": [
              "SYSTEM_COMPONENTS"
            ]
          },
          "managedPrometheusConfig": {
            "enabled": true
          },
          "advancedDatapathObservabilityConfig": {
            "relayMode": "DISABLED"
          }
        },
        "etag": "03dc1ae1-5ad0-448c-a02b-d4cb45a0ed68",
        "securityPostureConfig": {
          "mode": "BASIC",
          "vulnerabilityMode": "VULNERABILITY_MODE_UNSPECIFIED"
        }
      },
      {
        "name": "c7nnode-cluster-2",
        "initialNodeCount": 1,
        "masterAuth": {
          "clusterCaCertificate": "LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUVMRENDQXBTZ0F3SUJBZ0lRZjR1R0tXZWd5ZitOcGZYcXlsZDlIVEFOQmdrcWhraUc5dzBCQVFzRkFEQXYKTVMwd0t3WURWUVFERXlRNE9EQTBNMlZtTXkwM1lXWXpMVFJoT0RZdE9ESmpOQzFpWkRneE1tSXlORFExTXpNdwpJQmNOTWpNeE1EQXlNVE13TXpJMFdoZ1BNakExTXpBNU1qUXhOREF6TWpSYU1DOHhMVEFyQmdOVkJBTVRKRGc0Ck1EUXpaV1l6TFRkaFpqTXROR0U0TmkwNE1tTTBMV0prT0RFeVlqSTBORFV6TXpDQ0FhSXdEUVlKS29aSWh2Y04KQVFFQkJRQURnZ0dQQURDQ0FZb0NnZ0dCQUtXaG96T05nSnVmSlVHM0ExQU9sVyt3OXd3Q1R5N3FOUTFPU [...]
        },
        "loggingService": "logging.googleapis.com/kubernetes",
        "monitoringService": "monitoring.googleapis.com/kubernetes",
        "network": "gke-test-network",
        "clusterIpv4Cidr": "10.128.0.0/14",
        "addonsConfig": {
          "kubernetesDashboard": {
            "disabled": true
          },
          "networkPolicyConfig": {
            "disabled": true
          },
          "gcePersistentDiskCsiDriverConfig": {
            "enabled": true
          }
        },
        "subnetwork": "c7nfailnode-subnet-secondary",
        "locations": [
          "us-central1-f",
          "us-central1-b",
          "us-central1-c"
        ],
        "labelFingerprint": "a9dc16a7",
        "legacyAbac": {},
        "ipAllocationPolicy": {
          "useRoutes": true,
          "stackType": "IPV4",
          "podCidrOverprovisionConfig": {}
        },
        "masterAuthorizedNetworksConfig": {
          "gcpPublicCidrsAccessEnabled": true
        },
        "maintenancePolicy": {
          "resourceVersion": "e3b0c442"
        },
        "binaryAuthorization": {},
        "autoscaling": {
          "autoscalingProfile": "BALANCED"
        },
        "networkConfig": {
          "network": "projects/cloud-custodian/global/networks/gke-test-network",
          "subnetwork": "projects/cloud-custodian/regions/us-central1/subnetworks/c7nfailnode-subnet-secondary",
          "defaultSnatStatus": {},
          "serviceExternalIpsConfig": {}
        },
        "privateClusterConfig": {
          "privateEndpoint": "10.10.0.2",
          "publicEndpoint": "34.172.60.134"
        },
        "databaseEncryption": {
          "state": "DECRYPTED"
        },
        "shieldedNodes": {
          "enabled": true
        },
        "releaseChannel": {
          "channel": "REGULAR"
        },
        "notificationConfig": {
          "pubsub": {}
        },
        "selfLink": "https://container.googleapis.com/v1/projects/cloud-custodian/locations/us-central1/clusters/c7nnode-cluster-2",
        "zone": "us-central1",
        "endpoint": "34.172.60.134",
        "initialClusterVersion": "1.27.3-gke.100",
        "currentMasterVersion": "1.27.3-gke.100",
        "currentNodeVersion": "1.27.3-gke.100",
        "createTime": "2023-10-02T14:03:24+00:00",
        "status": "RUNNING",
        "nodeIpv4CidrSize": 24,
        "servicesIpv4Cidr": "10.131.240.0/20",
        "location": "us-central1",
        "autopilot": {},
        "id": "dbe394187f2547f4b58dd4ccea3ea45cf1cd0e441b7740e087d3c78f760e14ff",
        "nodePoolDefaults": {
          "nodeConfigDefaults": {
            "loggingConfig": {
              "variantConfig": {
                "variant": "DEFAULT"
              }
            }
          }
        },
        "loggingConfig": {
          "componentConfig": {
            "enableComponents": [
              "SYSTEM_COMPONENTS",
              "WORKLOADS"
            ]
          }
        },
        "monitoringConfig": {
          "componentConfig": {
            "enableComponents": [
              "SYSTEM_COMPONENTS"
            ]
          },
          "managedPrometheusConfig": {
            "enabled": true
          },
          "advancedDatapathObservabilityConfig": {
            "relayMode": "DISABLED"
          }
        },
        "etag": "d4bef350-5ca6-44bf-ae0f-0e3061850d81",
        "securityPostureConfig": {
          "mode": "BASIC",
          "vulnerabilityMode": "VULNERABILITY_MODE_UNSPECIFIED"
        }
      }
    ]
  }
}
